--- a/Garage2.6/Views/ParkedVehicles/receipt.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/receipt.cshtml
@@ -1,12 +1,10 @@
-﻿@model Garage2._6.Models.ReceiptViewModel
+﻿@model Garage2._6.Models.VehicleReceipt
 
 <br />
+<h2>receipt</h2>
 
-<h2>CheckOut</h2>
-
-<h3>Are you sure you want to check out @Model.RegNr ?</h3>
 <div>
-    <h4>Check</h4>
+    <h4>ReceiptViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -18,7 +16,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.VehicleType)
+        @Html.DisplayNameFor(model => model.VehicleType)
         </dt>
 
         <dd>
@@ -58,14 +56,8 @@
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm("Receipt", "ParkedVehicles"))
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.Id)
-        <div class="form-actions no-color">
-            <input type="submit" value="Check Out" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Overview")
-        </div>
-    }
 </div>
+<p>
+  
+    @Html.ActionLink("Back to List", "Overview")
+</p>
