conflict in foreign

--- a/Garage2.6/Views/ParkedVehicles/receipt.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/receipt.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Garage2._6.Models.VehicleReceipt
 
 <br />
-<h2>receipt</h2>
+<h2>Receipt</h2>
 
 <div>
-    <h4>ReceiptViewModel</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
