problems at join and park

--- a/Garage2.6/Views/ParkedVehicles/CheckOut.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/CheckOut.cshtml
@@ -22,7 +22,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.VehicleType)
+            @Html.DisplayFor(model => model.VehicleType.TypeName)
         </dd>
 
         <dt>
