--- a/Garage2.6/Views/ParkedVehicles/Details.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/Details.cshtml
@@ -14,9 +14,9 @@
         <dd>
             @Html.DisplayFor(model => model.RegNr)
         </dd>
-        <dt>@Html.DisplayNameFor(model => model.DropType)</dt>
+        <dt>@Html.DisplayNameFor(model => model.VehicleType)</dt>
 
-        <dd>@Html.DisplayFor(model=>model.DropType)</dd>
+        <dd>@Html.DisplayFor(model=>model.VehicleType.TypeName)</dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Description)
@@ -48,6 +48,12 @@
 
         <dd>
             @Html.DisplayFor(model => model.CheckIn)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Members.FirstName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Members.FirstName)
         </dd>
 
     </dl>
