--- a/Garage2.6/Views/ParkedVehicles/Overview.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/Overview.cshtml
@@ -26,7 +26,7 @@
         </th>
 
         <th>
-            @Html.DisplayNameFor(model => model.DropType)
+            @Html.DisplayNameFor(model => model.VehicleType)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Description)
@@ -47,8 +47,9 @@
                 @Html.DisplayFor(modelItem => item.RegNr)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DropType)
+                @Html.DisplayFor(modelItem => item.VehicleType.TypeName)
             </td>
+           
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
