--- a/Garage2.6/Views/Shared/_Layout.cshtml
+++ b/Garage2.6/Views/Shared/_Layout.cshtml
@@ -20,12 +20,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Overview", "Overview", "ParkedVehicles")</li>
+                    <li>
+                        @Html.ActionLink("Join Us!", "create", "Members")
+                    </li>
+                    <li>@Html.ActionLink("Vehicle Overview", "Overview", "ParkedVehicles")</li>
                   
 
+                    <li>@Html.ActionLink("Member Index","Index","Members")</li>                   
                     <li>@Html.ActionLink("Full Index", "index", "parkedVehicles")</li>
-                   
                 </ul>
             </div>
         </div>
