still not finished

--- a/Garage2.6/Views/Members/Details.cshtml
+++ b/Garage2.6/Views/Members/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage2._6.Models.ParkedVehicle
+﻿@model Garage2._6.Models.Member
 
 <br>
 <h2>Details</h2>
@@ -30,12 +30,7 @@
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.VehicleType)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Types)
-        </dd>
+     
     </dl>
 </div>
 
