--- a/Garage2.6/Views/ParkedVehicles/Overview.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/Overview.cshtml
@@ -5,14 +5,14 @@
 <h2>Overview</h2>
 
 <p>
-    @Html.ActionLink("Park a Vehicle", "Park")
+    @Html.ActionLink("Park a new Vehicle", "Park")
 </p>
 
 @using (Html.BeginForm("Search", "ParkedVehicles", FormMethod.Post))
 {
     <form method="post" action="overview">
         @Html.TextBox("search")
-        <button class="btn btn-default" type="submit" value="search"><i class="glyphicon glyphicon-search"></i></button>
+        <button class="btn btn-default" type="submit" value="search"><i class="glyphicon glyphicon-search"></i></button><p>Search on registration number</p>
 
     </form>
 }
@@ -29,14 +29,15 @@
             @Html.DisplayNameFor(model => model.VehicleType)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Members.FirstName)
         </th>
-
-
-
         <th>
             @Html.DisplayNameFor(model => model.CheckIn)
         </th>
+
+
+
+        
         <th></th>
     </tr>
 
@@ -51,7 +52,7 @@
             </td>
            
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.Members.FirstName)
             </td>
 
 
