--- a/Garage2.6/Views/ParkedVehicles/receipt.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/receipt.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage2._6.Models.VehicleReceipt
+﻿@model Garage2._6.Models.ReceiptViewModel
 
 <br />
 <h2>receipt</h2>
@@ -15,14 +15,7 @@
             @Html.DisplayFor(model => model.RegNr)
         </dd>
 
-        <dt>
-        @Html.DisplayNameFor(model => model.VehicleType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.VehicleType)
-        </dd>
-
+      
         <dt>
             @Html.DisplayNameFor(model => model.CheckIn)
         </dt>
