--- a/Garage2.6/Content/Site.css
+++ b/Garage2.6/Content/Site.css
@@ -26,3 +26,10 @@ textarea {
     width: 20px;
     height: 20px;
 }
+.pic {
+    align-content: center;
+    width: 300px;
+    height: 210px;
+    
+}
+
