--- a/Garage2.6/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.6/Views/ParkedVehicles/Index.cshtml
@@ -4,7 +4,7 @@
 <h2>Full Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Park")
+    @Html.ActionLink("Park", "Park")
 </p>
 <table class="table">
     <tr>
@@ -13,6 +13,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Members.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Members.LastName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Description)
@@ -26,10 +29,12 @@
         </th>
         
 
-        <th>@Html.DisplayNameFor(model => model.VehicleType)</th>
+        <th>@Html.DisplayNameFor(model => model.VehicleType.TypeName)</th>
+      
         <th>
             @Html.DisplayNameFor(model => model.CheckIn)
         </th>
+       
         <th></th>
     </tr>
 
@@ -42,6 +47,9 @@
             @Html.DisplayFor(modelItem => item.Members.FirstName)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.Members.LastName)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
@@ -52,9 +60,11 @@
         </td>
         
         <td>@Html.DisplayFor(modelItem=> item.VehicleType.TypeName)</td>
+       
         <td>
             @Html.DisplayFor(modelItem => item.CheckIn)
         </td>
+
       
     </tr>
 }
