--- a/Garage2.6/Views/Members/Details.cshtml
+++ b/Garage2.6/Views/Members/Details.cshtml
@@ -30,6 +30,13 @@
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.VehicleType)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.VehicleType.TypeName)
+        </dd>
+      
      
     </dl>
 </div>
