--- a/Garage2.6/Views/Members/Index.cshtml
+++ b/Garage2.6/Views/Members/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.MemberId }) 
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) 
             </td>
         </tr>
     }
